k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: python-basic
  name: python-basic
spec:
  type: NodePort
  ports:
    - name: http-8081
      port: 8081
      protocol: TCP
      targetPort: 8081
  selector:
    app: python-basic
