k8s/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: python-basic
  name: python-basic
spec:
  port:
    targetPort: 8081-tcp
  tls: 
    insecureEdgeTerminationPolicy: Redirect
    termination: edge    
  to:
    kind: Service
    name: pipelines-vote-ui
    weight: 100
